Changed the logo and font for the whole app
Signed-off-by: Jani Banigev <jani.bangiev@gmail.com>

--- a/app/src/main/res/layout/activity_leaderboard.xml
+++ b/app/src/main/res/layout/activity_leaderboard.xml
@@ -12,9 +12,10 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="60dp"
-        android:fontFamily="@font/bungee_shade"
+        android:fontFamily="@font/custom_font"
         android:text="LEADERBOARD"
-        android:textSize="45sp"
+        android:textSize="40sp"
+        android:textStyle="italic"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent"
@@ -24,10 +25,11 @@
         android:id="@+id/title2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:fontFamily="@font/bungee_shade"
+        android:fontFamily="@font/custom_font"
         android:text="COMING SOON!"
         android:textAlignment="center"
         android:textSize="50sp"
+        android:textStyle="italic"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
