--- a/app/src/main/res/layout/activity_main_menu.xml
+++ b/app/src/main/res/layout/activity_main_menu.xml
@@ -12,13 +12,13 @@
         android:id="@+id/Title"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="60dp"
-        android:fontFamily="@font/bungee_shade"
+        android:layout_marginTop="72dp"
+        android:fontFamily="@font/custom_font"
         android:text="RNG DRINKS"
         android:textSize="50dp"
-        android:textStyle="bold"
+        android:textStyle="italic"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.444"
+        app:layout_constraintHorizontal_bias="0.478"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -27,9 +27,10 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="16dp"
-        android:fontFamily="@font/antic"
+        android:fontFamily="@font/custom_font"
         android:text="Developed by Big Sad Studios"
         android:textColor="#FFFFFF"
+        android:textStyle="italic"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
@@ -39,10 +40,12 @@
         android:layout_width="300dp"
         android:layout_height="wrap_content"
         android:background="@drawable/custom_button"
-        android:fontFamily="@font/bungee_shade"
+        android:fontFamily="@font/custom_font"
         android:onClick="startGame"
         android:text="Play!"
-        android:textSize="30sp"
+        android:textAlignment="center"
+        android:textSize="20sp"
+        android:textStyle="italic"
         app:layout_constraintBottom_toTopOf="@+id/developer"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.495"
@@ -55,10 +58,11 @@
         android:layout_width="300dp"
         android:layout_height="wrap_content"
         android:background="@drawable/custom_button"
-        android:fontFamily="@font/bungee_shade"
+        android:fontFamily="@font/custom_font"
         android:onClick="openSettings"
         android:text="Settings"
-        android:textSize="30sp"
+        android:textSize="20sp"
+        android:textStyle="italic"
         app:layout_constraintBottom_toTopOf="@+id/developer"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.495"
@@ -71,10 +75,11 @@
         android:layout_width="300dp"
         android:layout_height="wrap_content"
         android:background="@drawable/custom_button"
-        android:fontFamily="@font/bungee_shade"
+        android:fontFamily="@font/custom_font"
         android:onClick="openLeaderboard"
         android:text="Leaderboard"
-        android:textSize="30sp"
+        android:textSize="20sp"
+        android:textStyle="italic"
         app:layout_constraintBottom_toTopOf="@+id/developer"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.495"
@@ -87,10 +92,11 @@
         android:layout_width="300dp"
         android:layout_height="wrap_content"
         android:background="@drawable/custom_button"
-        android:fontFamily="@font/bungee_shade"
+        android:fontFamily="@font/custom_font"
         android:onClick="exit"
         android:text="Exit"
-        android:textSize="30sp"
+        android:textSize="20sp"
+        android:textStyle="italic"
         app:layout_constraintBottom_toTopOf="@+id/developer"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.495"
