--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -22,10 +22,11 @@
         android:layout_height="143dp"
         android:layout_marginBottom="60dp"
         android:background="@drawable/custom_button"
-        android:fontFamily="@font/bungee_shade"
+        android:fontFamily="@font/custom_font"
         android:onClick="nextRandom"
         android:text="Test your luck!"
         android:textSize="24sp"
+        android:textStyle="italic"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.496"
@@ -35,10 +36,9 @@
         android:id="@+id/sips_text"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:fontFamily="@font/bungee_shade"
+        android:fontFamily="@font/custom_font"
         android:text="Number of sips: 0"
         android:textAlignment="center"
-        android:textColor="#000000"
         android:textSize="30sp"
         app:layout_constraintBottom_toTopOf="@+id/generate_button"
         app:layout_constraintEnd_toEndOf="parent"
@@ -49,12 +49,13 @@
         android:id="@+id/text"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:fontFamily="@font/bungee_shade"
+        android:layout_marginTop="24dp"
+        android:fontFamily="@font/custom_font"
         android:text="Your number is:"
         android:textAlignment="center"
         android:textAllCaps="true"
-        android:textColor="#000000"
         android:textSize="50sp"
+        android:textStyle="italic"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
@@ -64,11 +65,12 @@
         android:id="@+id/new_random_text"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:fontFamily="@font/bungee_shade"
+        android:layout_marginTop="24dp"
+        android:fontFamily="@font/custom_font"
         android:text="0"
-        android:textColor="#000000"
         android:textSize="80sp"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/text" />
 
@@ -76,9 +78,8 @@
         android:id="@+id/lose_message"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:fontFamily="@font/bungee_shade"
+        android:fontFamily="@font/custom_font"
         android:text="Tough luck!"
-        android:textColor="#000000"
         android:textSize="30sp"
         android:visibility="invisible"
         app:layout_constraintEnd_toEndOf="parent"
@@ -90,9 +91,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
-        android:fontFamily="@font/bungee_shade"
+        android:fontFamily="@font/custom_font"
         android:text="YOU LOSE!"
-        android:textColor="#000000"
         android:textSize="50sp"
         android:visibility="invisible"
         app:layout_constraintBottom_toTopOf="@+id/sips_text"
