--- a/app/src/main/res/layout/activity_setup_menu.xml
+++ b/app/src/main/res/layout/activity_setup_menu.xml
@@ -13,10 +13,13 @@
         android:layout_height="wrap_content"
         android:layout_marginBottom="56dp"
         android:background="@drawable/custom_button"
-        android:fontFamily="@font/bungee_shade"
+        android:backgroundTintMode="add"
+        android:fontFamily="@font/custom_font"
         android:onClick="beginGame"
         android:text="Begin!"
-        android:textSize="30sp"
+        android:textAlignment="center"
+        android:textSize="20sp"
+        android:textStyle="italic"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.495"
@@ -27,10 +30,11 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="80dp"
-        android:fontFamily="@font/bungee_shade"
+        android:fontFamily="@font/custom_font"
         android:text="Number of players:"
         android:textAlignment="center"
         android:textSize="36sp"
+        android:textStyle="italic"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -39,13 +43,13 @@
         android:id="@+id/textView2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="260dp"
-        android:fontFamily="@font/bungee_shade"
+        android:layout_marginTop="280dp"
+        android:fontFamily="@font/custom_font"
         android:text="Starting number:"
         android:textAlignment="center"
         android:textSize="36sp"
+        android:textStyle="italic"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -53,8 +57,9 @@
         android:id="@+id/number_of_players"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginTop="20dp"
         android:ems="10"
-        android:fontFamily="@font/bungee_shade"
+        android:fontFamily="@font/custom_font"
         android:inputType="number"
         android:text="6"
         android:textAlignment="center"
@@ -67,14 +72,14 @@
         android:id="@+id/starting_number"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginTop="20dp"
         android:ems="10"
-        android:fontFamily="@font/bungee_shade"
+        android:fontFamily="@font/custom_font"
         android:inputType="number"
         android:text="150"
         android:textAlignment="center"
         android:textSize="24sp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.533"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView2" />
 </androidx.constraintlayout.widget.ConstraintLayout>
