- Fixed the custom randomization - Fixed the impossible numbers entered (0/1) - Reworked the popup activity so it can be used everywhere
Signed-off-by: Jani Banigev <jani.bangiev@gmail.com>

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -33,7 +33,7 @@
         app:layout_constraintStart_toStartOf="parent" />
 
     <TextView
-        android:id="@+id/sips_text"
+        android:id="@+id/Sub_message"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:fontFamily="@font/custom_font"
