--- a/app/src/main/res/layout/activity_pop.xml
+++ b/app/src/main/res/layout/activity_pop.xml
@@ -22,37 +22,36 @@
         app:layout_constraintStart_toStartOf="parent" />
 
     <TextView
-        android:id="@+id/sips_text"
-        android:layout_width="348dp"
-        android:layout_height="33dp"
-        android:layout_marginBottom="4dp"
+        android:id="@+id/Sub_message"
+        android:layout_width="360dp"
+        android:layout_height="47dp"
         android:fontFamily="@font/custom_font"
         android:text="You have 8 sips"
         android:textAlignment="center"
         android:textColor="#000000"
-        android:textSize="15sp"
+        android:textSize="20sp"
         android:textStyle="italic"
-        app:layout_constraintBottom_toTopOf="@+id/endMessage"
+        app:layout_constraintBottom_toTopOf="@+id/Optional_message"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.571"
+        app:layout_constraintHorizontal_bias="0.49"
         app:layout_constraintStart_toStartOf="parent" />
 
     <TextView
-        android:id="@+id/endMessage"
-        android:layout_width="339dp"
-        android:layout_height="20dp"
+        android:id="@+id/Optional_message"
+        android:layout_width="379dp"
+        android:layout_height="42dp"
         android:layout_marginBottom="12dp"
         android:fontFamily="@font/custom_font"
         android:textAlignment="center"
         android:textColor="#000000"
-        android:textSize="7sp"
+        android:textSize="15sp"
         android:textStyle="italic"
         app:layout_constraintBottom_toTopOf="@+id/close_btn"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
 
     <TextView
-        android:id="@+id/textView4"
+        android:id="@+id/Title_Message"
         android:layout_width="360dp"
         android:layout_height="59dp"
         android:fontFamily="@font/custom_font"
@@ -61,10 +60,10 @@
         android:textColor="#000000"
         android:textSize="30sp"
         android:textStyle="italic"
-        app:layout_constraintBottom_toTopOf="@+id/sips_text"
+        app:layout_constraintBottom_toTopOf="@+id/Sub_message"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.478"
+        app:layout_constraintHorizontal_bias="0.49"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.98" />
+        app:layout_constraintVertical_bias="1.0" />
 </androidx.constraintlayout.widget.ConstraintLayout>
