--- a/app/src/main/res/layout/settings_activity.xml
+++ b/app/src/main/res/layout/settings_activity.xml
@@ -1,10 +1,78 @@
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<?xml version="1.0" encoding="utf-8"?>
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:background="#f28e1c"
+    tools:context=".SettingsActivity">
 
-    <FrameLayout
-        android:id="@+id/settings"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent" />
 
-</LinearLayout>
+    <Button
+        android:id="@+id/sound_button"
+        android:layout_width="77dp"
+        android:layout_height="73dp"
+        android:layout_marginTop="136dp"
+        android:background="@drawable/volume_on"
+        android:onClick="soundClicked"
+        app:layout_constraintEnd_toStartOf="@+id/music_text"
+        app:layout_constraintHorizontal_bias="0.508"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/Title_text" />
+
+    <TextView
+        android:id="@+id/sound_text"
+        android:layout_width="143dp"
+        android:layout_height="45dp"
+
+        android:layout_marginTop="164dp"
+        android:fontFamily="@font/custom_font"
+        android:text="SOUND ON"
+        android:textAlignment="center"
+        android:textSize="18sp"
+        android:textStyle="bold|italic"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/Title_text" />
+
+    <TextView
+        android:id="@+id/Title_text"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="44dp"
+        android:fontFamily="@font/custom_font"
+        android:text="Settings"
+        android:textSize="36sp"
+        android:textStyle="italic"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.497"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <Button
+        android:id="@+id/music_button"
+        android:layout_width="77dp"
+        android:layout_height="73dp"
+        android:layout_marginTop="36dp"
+        android:background="@drawable/music_on"
+        android:onClick="musicClicked"
+        app:layout_constraintEnd_toStartOf="@+id/music_text"
+        app:layout_constraintHorizontal_bias="0.508"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/Title_text" />
+
+    <TextView
+        android:id="@+id/music_text"
+        android:layout_width="143dp"
+        android:layout_height="45dp"
+
+        android:layout_marginTop="64dp"
+        android:fontFamily="@font/custom_font"
+        android:text="MUSIC ON"
+        android:textAlignment="center"
+        android:textSize="18sp"
+        android:textStyle="bold|italic"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/Title_text" />
+</androidx.constraintlayout.widget.ConstraintLayout>
