- Added multiple language support - Changed color palette
Signed-off-by: Jani Banigev <jani.bangiev@gmail.com>

--- a/app/src/main/res/layout/activity_main_menu.xml
+++ b/app/src/main/res/layout/activity_main_menu.xml
@@ -28,7 +28,7 @@
         android:layout_height="wrap_content"
         android:layout_marginBottom="16dp"
         android:fontFamily="@font/custom_font"
-        android:text="Developed by Big Sad Studios"
+        android:text="@string/developer"
         android:textColor="#FFFFFF"
         android:textStyle="italic"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -42,7 +42,7 @@
         android:background="@drawable/custom_button"
         android:fontFamily="@font/custom_font"
         android:onClick="startGame"
-        android:text="Play!"
+        android:text="@string/play_button"
         android:textAlignment="center"
         android:textSize="20sp"
         android:textStyle="italic"
@@ -60,7 +60,7 @@
         android:background="@drawable/custom_button"
         android:fontFamily="@font/custom_font"
         android:onClick="openSettings"
-        android:text="Settings"
+        android:text="@string/settings_button"
         android:textSize="20sp"
         android:textStyle="italic"
         app:layout_constraintBottom_toTopOf="@+id/developer"
@@ -71,13 +71,13 @@
         app:layout_constraintVertical_bias="0.364" />
 
     <Button
-        android:id="@+id/leaderboard_button"
+        android:id="@+id/achievements_button"
         android:layout_width="300dp"
         android:layout_height="wrap_content"
         android:background="@drawable/custom_button"
         android:fontFamily="@font/custom_font"
         android:onClick="openLeaderboard"
-        android:text="Leaderboard"
+        android:text="@string/achievements_button"
         android:textSize="20sp"
         android:textStyle="italic"
         app:layout_constraintBottom_toTopOf="@+id/developer"
@@ -94,7 +94,7 @@
         android:background="@drawable/custom_button"
         android:fontFamily="@font/custom_font"
         android:onClick="exit"
-        android:text="Exit"
+        android:text="@string/exit_button"
         android:textSize="20sp"
         android:textStyle="italic"
         app:layout_constraintBottom_toTopOf="@+id/developer"
