--- a/app/src/main/res/layout/activity_pop.xml
+++ b/app/src/main/res/layout/activity_pop.xml
@@ -26,7 +26,7 @@
         android:layout_width="360dp"
         android:layout_height="47dp"
         android:fontFamily="@font/custom_font"
-        android:text="You have 8 sips"
+        android:text="@string/popup_sips"
         android:textAlignment="center"
         android:textColor="#000000"
         android:textSize="20sp"
@@ -55,7 +55,7 @@
         android:layout_width="360dp"
         android:layout_height="59dp"
         android:fontFamily="@font/custom_font"
-        android:text="YOU LOSE !"
+        android:text="@string/popup_title"
         android:textAlignment="center"
         android:textColor="#000000"
         android:textSize="30sp"
