--- a/app/src/main/res/layout/activity_setup_menu.xml
+++ b/app/src/main/res/layout/activity_setup_menu.xml
@@ -16,7 +16,7 @@
         android:backgroundTintMode="add"
         android:fontFamily="@font/custom_font"
         android:onClick="beginGame"
-        android:text="Begin!"
+        android:text="@string/setup_button"
         android:textAlignment="center"
         android:textSize="20sp"
         android:textStyle="italic"
@@ -31,7 +31,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="80dp"
         android:fontFamily="@font/custom_font"
-        android:text="Number of players:"
+        android:text="@string/num_of_players"
         android:textAlignment="center"
         android:textSize="36sp"
         android:textStyle="italic"
@@ -45,7 +45,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="280dp"
         android:fontFamily="@font/custom_font"
-        android:text="Starting number:"
+        android:text="@string/starting_number"
         android:textAlignment="center"
         android:textSize="36sp"
         android:textStyle="italic"
