--- a/app/src/main/res/drawable/pop_bg.xml
+++ b/app/src/main/res/drawable/pop_bg.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
     <gradient
-        android:startColor="#D5BC00"
-        android:endColor="#d58700"
+        android:startColor="#C77518"
+        android:endColor="#E0841B"
         android:angle="270"
         />
 
