--- a/app/src/main/res/layout/activity_achievements.xml
+++ b/app/src/main/res/layout/activity_achievements.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#f28e1c"
-    tools:context=".LeaderboardActivity">
+    tools:context=".AchievementsActivity">
 
     <TextView
         android:id="@+id/Title"
@@ -13,11 +13,10 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="60dp"
         android:fontFamily="@font/custom_font"
-        android:text="LEADERBOARD"
-        android:textSize="40sp"
+        android:text="@string/achievements_title"
+        android:textSize="35sp"
         android:textStyle="italic"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -26,7 +25,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:fontFamily="@font/custom_font"
-        android:text="COMING SOON!"
+        android:text="@string/coming_soon"
         android:textAlignment="center"
         android:textSize="50sp"
         android:textStyle="italic"
