--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -24,7 +24,7 @@
         android:background="@drawable/custom_button"
         android:fontFamily="@font/custom_font"
         android:onClick="nextRandom"
-        android:text="Test your luck!"
+        android:text="@string/roll_button"
         android:textSize="24sp"
         android:textStyle="italic"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -37,7 +37,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:fontFamily="@font/custom_font"
-        android:text="Number of sips: 0"
+        android:text="@string/num_of_sips"
         android:textAlignment="center"
         android:textSize="30sp"
         app:layout_constraintBottom_toTopOf="@+id/generate_button"
@@ -51,7 +51,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="24dp"
         android:fontFamily="@font/custom_font"
-        android:text="Your number is:"
+        android:text="@string/your_number"
         android:textAlignment="center"
         android:textAllCaps="true"
         android:textSize="50sp"
