--- a/app/src/main/res/layout/settings_activity.xml
+++ b/app/src/main/res/layout/settings_activity.xml
@@ -9,6 +9,34 @@
 
 
     <Button
+        android:id="@+id/sl"
+        android:layout_width="77dp"
+        android:layout_height="73dp"
+        android:layout_marginTop="240dp"
+        android:background="@drawable/ic_slovenia"
+        android:onClick="changeLanguage"
+        android:text="sl"
+        android:textColor="#00FFFFFF"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.317"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/Title_text" />
+
+    <Button
+        android:id="@+id/en"
+        android:layout_width="77dp"
+        android:layout_height="73dp"
+        android:layout_marginTop="240dp"
+        android:background="@drawable/ic_united_kingdom"
+        android:onClick="changeLanguage"
+        android:text="en"
+        android:textColor="#00FFFFFF"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.679"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/Title_text" />
+
+    <Button
         android:id="@+id/sound_button"
         android:layout_width="77dp"
         android:layout_height="73dp"
@@ -27,7 +55,7 @@
 
         android:layout_marginTop="164dp"
         android:fontFamily="@font/custom_font"
-        android:text="SOUND ON"
+        android:text="@string/sound_off"
         android:textAlignment="center"
         android:textSize="18sp"
         android:textStyle="bold|italic"
@@ -41,7 +69,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="44dp"
         android:fontFamily="@font/custom_font"
-        android:text="Settings"
+        android:text="@string/settings_title"
         android:textSize="36sp"
         android:textStyle="italic"
         app:layout_constraintEnd_toEndOf="parent"
@@ -68,7 +96,7 @@
 
         android:layout_marginTop="64dp"
         android:fontFamily="@font/custom_font"
-        android:text="MUSIC ON"
+        android:text="@string/music_on"
         android:textAlignment="center"
         android:textSize="18sp"
         android:textStyle="bold|italic"
