- Added a new font with čžš support - Fixed some of the spacing issues
Signed-off-by: Jani Banigev <jani.bangiev@gmail.com>

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -23,9 +23,10 @@
         android:layout_marginBottom="60dp"
         android:background="@drawable/custom_button"
         android:fontFamily="@font/custom_font"
+        android:lineSpacingExtra="10sp"
         android:onClick="nextRandom"
         android:text="@string/roll_button"
-        android:textSize="24sp"
+        android:textSize="40sp"
         android:textStyle="italic"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -37,9 +38,10 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:fontFamily="@font/custom_font"
+        android:lineSpacingExtra="10sp"
         android:text="@string/num_of_sips"
         android:textAlignment="center"
-        android:textSize="30sp"
+        android:textSize="45sp"
         app:layout_constraintBottom_toTopOf="@+id/generate_button"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -51,10 +53,11 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="24dp"
         android:fontFamily="@font/custom_font"
+        android:lineSpacingExtra="10sp"
         android:text="@string/your_number"
         android:textAlignment="center"
         android:textAllCaps="true"
-        android:textSize="50sp"
+        android:textSize="70sp"
         android:textStyle="italic"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
@@ -68,7 +71,7 @@
         android:layout_marginTop="24dp"
         android:fontFamily="@font/custom_font"
         android:text="0"
-        android:textSize="80sp"
+        android:textSize="120sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent"
