--- a/app/src/main/res/layout/activity_setup_menu.xml
+++ b/app/src/main/res/layout/activity_setup_menu.xml
@@ -18,7 +18,7 @@
         android:onClick="beginGame"
         android:text="@string/setup_button"
         android:textAlignment="center"
-        android:textSize="20sp"
+        android:textSize="32sp"
         android:textStyle="italic"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -31,9 +31,10 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="80dp"
         android:fontFamily="@font/custom_font"
+        android:lineSpacingExtra="15sp"
         android:text="@string/num_of_players"
         android:textAlignment="center"
-        android:textSize="36sp"
+        android:textSize="50sp"
         android:textStyle="italic"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -45,9 +46,10 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="280dp"
         android:fontFamily="@font/custom_font"
+        android:lineSpacingExtra="15sp"
         android:text="@string/starting_number"
         android:textAlignment="center"
-        android:textSize="36sp"
+        android:textSize="50sp"
         android:textStyle="italic"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -63,7 +65,7 @@
         android:inputType="number"
         android:text="6"
         android:textAlignment="center"
-        android:textSize="24sp"
+        android:textSize="35sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/players" />
@@ -78,7 +80,7 @@
         android:inputType="number"
         android:text="150"
         android:textAlignment="center"
-        android:textSize="24sp"
+        android:textSize="35sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView2" />
