--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -17,10 +17,24 @@
         android:background="#f28e1c"/>
 
     <Button
+        android:id="@+id/sl5"
+        android:layout_width="77dp"
+        android:layout_height="73dp"
+        android:layout_marginBottom="28dp"
+        android:background="@drawable/ic_baseline_arrow_circle_down_24"
+        android:onClick="back"
+        android:rotation="90"
+        android:textColor="#00FFFFFF"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.08"
+        app:layout_constraintStart_toStartOf="parent" />
+
+    <Button
         android:id="@+id/generate_button"
         android:layout_width="252dp"
         android:layout_height="143dp"
-        android:layout_marginBottom="60dp"
+        android:layout_marginBottom="112dp"
         android:background="@drawable/custom_button"
         android:fontFamily="@font/custom_font"
         android:lineSpacingExtra="10sp"
@@ -45,7 +59,8 @@
         app:layout_constraintBottom_toTopOf="@+id/generate_button"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/new_random_text" />
+        app:layout_constraintTop_toBottomOf="@+id/new_random_text"
+        app:layout_constraintVertical_bias="0.395" />
 
     <TextView
         android:id="@+id/text"
