--- a/app/src/main/res/layout/activity_setup_menu.xml
+++ b/app/src/main/res/layout/activity_setup_menu.xml
@@ -8,10 +8,24 @@
     tools:context=".SetupMenu">
 
     <Button
+        android:id="@+id/sl4"
+        android:layout_width="77dp"
+        android:layout_height="73dp"
+        android:layout_marginBottom="28dp"
+        android:background="@drawable/ic_baseline_arrow_circle_down_24"
+        android:onClick="back"
+        android:rotation="90"
+        android:textColor="#00FFFFFF"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.08"
+        app:layout_constraintStart_toStartOf="parent" />
+
+    <Button
         android:id="@+id/begin_button"
         android:layout_width="300dp"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="56dp"
+        android:layout_marginBottom="124dp"
         android:background="@drawable/custom_button"
         android:backgroundTintMode="add"
         android:fontFamily="@font/custom_font"
@@ -84,4 +98,5 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView2" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
