--- a/app/src/main/res/layout/settings_activity.xml
+++ b/app/src/main/res/layout/settings_activity.xml
@@ -9,6 +9,20 @@
 
 
     <Button
+        android:id="@+id/sl2"
+        android:layout_width="77dp"
+        android:layout_height="73dp"
+        android:layout_marginBottom="28dp"
+        android:background="@drawable/ic_baseline_arrow_circle_down_24"
+        android:onClick="back"
+        android:rotation="90"
+        android:textColor="#00FFFFFF"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.08"
+        app:layout_constraintStart_toStartOf="parent" />
+
+    <Button
         android:id="@+id/sl"
         android:layout_width="77dp"
         android:layout_height="73dp"
@@ -18,7 +32,7 @@
         android:text="sl"
         android:textColor="#00FFFFFF"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.317"
+        app:layout_constraintHorizontal_bias="0.287"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/Title_text" />
 
@@ -32,7 +46,7 @@
         android:text="en"
         android:textColor="#00FFFFFF"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.679"
+        app:layout_constraintHorizontal_bias="0.652"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/Title_text" />
 
@@ -40,26 +54,27 @@
         android:id="@+id/sound_button"
         android:layout_width="77dp"
         android:layout_height="73dp"
-        android:layout_marginTop="136dp"
+        android:layout_marginTop="132dp"
         android:background="@drawable/volume_on"
         android:onClick="soundClicked"
         app:layout_constraintEnd_toStartOf="@+id/music_text"
-        app:layout_constraintHorizontal_bias="0.508"
+        app:layout_constraintHorizontal_bias="0.52"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/Title_text" />
 
     <TextView
         android:id="@+id/sound_text"
-        android:layout_width="143dp"
-        android:layout_height="45dp"
+        android:layout_width="200dp"
+        android:layout_height="44dp"
 
-        android:layout_marginTop="164dp"
+        android:layout_marginTop="152dp"
         android:fontFamily="@font/custom_font"
         android:text="@string/sound_off"
         android:textAlignment="center"
-        android:textSize="25sp"
+        android:textSize="40sp"
         android:textStyle="bold|italic"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.753"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/Title_text" />
 
@@ -81,26 +96,27 @@
         android:id="@+id/music_button"
         android:layout_width="77dp"
         android:layout_height="73dp"
-        android:layout_marginTop="36dp"
+        android:layout_marginTop="32dp"
         android:background="@drawable/music_on"
         android:onClick="musicClicked"
         app:layout_constraintEnd_toStartOf="@+id/music_text"
-        app:layout_constraintHorizontal_bias="0.508"
+        app:layout_constraintHorizontal_bias="0.52"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/Title_text" />
 
     <TextView
         android:id="@+id/music_text"
-        android:layout_width="143dp"
-        android:layout_height="45dp"
+        android:layout_width="203dp"
+        android:layout_height="39dp"
 
-        android:layout_marginTop="64dp"
+        android:layout_marginTop="48dp"
         android:fontFamily="@font/custom_font"
         android:text="@string/music_on"
         android:textAlignment="center"
-        android:textSize="25sp"
+        android:textSize="40sp"
         android:textStyle="bold|italic"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.753"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/Title_text" />
 </androidx.constraintlayout.widget.ConstraintLayout>
