--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -11,24 +11,25 @@
         android:id="@+id/overlay"
         android:layout_width="match_parent"
         android:layout_height="0dp"
+        android:background="#f28e1c"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        android:background="#f28e1c"/>
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent" />
 
     <Button
         android:id="@+id/sl5"
-        android:layout_width="77dp"
-        android:layout_height="73dp"
-        android:layout_marginBottom="28dp"
+        android:layout_width="50sp"
+        android:layout_height="50sp"
+        android:layout_marginTop="16dp"
         android:background="@drawable/ic_baseline_arrow_circle_down_24"
         android:onClick="back"
         android:rotation="90"
         android:textColor="#00FFFFFF"
-        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.08"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintHorizontal_bias="0.955"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <Button
         android:id="@+id/info_button"
@@ -48,7 +49,7 @@
         android:id="@+id/generate_button"
         android:layout_width="252dp"
         android:layout_height="143dp"
-        android:layout_marginBottom="112dp"
+        android:layout_marginBottom="44dp"
         android:background="@drawable/custom_button"
         android:fontFamily="@font/custom_font"
         android:lineSpacingExtra="10sp"
@@ -74,7 +75,22 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/new_random_text"
-        app:layout_constraintVertical_bias="0.395" />
+        app:layout_constraintVertical_bias="0.704" />
+
+    <TextView
+        android:id="@+id/current_player"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:fontFamily="@font/custom_font"
+        android:lineSpacingExtra="10sp"
+        android:text="@string/current_player"
+        android:textAlignment="center"
+        android:textSize="45sp"
+        app:layout_constraintBottom_toTopOf="@+id/generate_button"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/new_random_text"
+        app:layout_constraintVertical_bias="0.156" />
 
     <TextView
         android:id="@+id/text"
@@ -97,7 +113,7 @@
         android:id="@+id/new_random_text"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="24dp"
+        android:layout_marginTop="16dp"
         android:fontFamily="@font/custom_font"
         android:text="0"
         android:textSize="120sp"
