--- a/app/src/main/res/layout/activity_player_select.xml
+++ b/app/src/main/res/layout/activity_player_select.xml
@@ -8,10 +8,24 @@
     android:background="#f28e1c">
 
     <Button
+        android:id="@+id/sl7"
+        android:layout_width="77dp"
+        android:layout_height="73dp"
+        android:layout_marginBottom="28dp"
+        android:background="@drawable/ic_baseline_arrow_circle_down_24"
+        android:onClick="back"
+        android:rotation="90"
+        android:textColor="#00FFFFFF"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.08"
+        app:layout_constraintStart_toStartOf="parent" />
+
+    <Button
         android:id="@+id/begin_button2"
         android:layout_width="300dp"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="40dp"
+        android:layout_marginBottom="112dp"
         android:background="@drawable/custom_button"
         android:backgroundTintMode="add"
         android:fontFamily="@font/custom_font"
@@ -42,11 +56,11 @@
     <ListView
         android:id="@+id/player_list"
         android:layout_width="match_parent"
-        android:layout_height="503dp"
+        android:layout_height="450dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.548" />
+        app:layout_constraintVertical_bias="0.43" />
 </androidx.constraintlayout.widget.ConstraintLayout>
