--- a/app/src/main/res/layout/activity_pop.xml
+++ b/app/src/main/res/layout/activity_pop.xml
@@ -40,7 +40,8 @@
         app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.629"
+        app:layout_constraintVertical_bias="0.5
+"
         tools:text="Test" />
 
     <TextView
@@ -56,7 +57,7 @@
         android:textStyle="italic"
         app:layout_constraintBottom_toTopOf="@+id/Sub_message"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.497"
+        app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent" />
 
     <Button
@@ -66,6 +67,8 @@
         android:layout_marginTop="20dp"
         android:background="@drawable/custom_button"
         android:fontFamily="@font/custom_font"
+        android:paddingLeft="20dp"
+        android:paddingRight="20dp"
         android:text="Another round!"
         android:textSize="25sp"
         android:textStyle="italic"
