--- a/app/src/main/res/layout/activity_pop.xml
+++ b/app/src/main/res/layout/activity_pop.xml
@@ -29,7 +29,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:fontFamily="@font/custom_font"
-        android:lineSpacingExtra="5sp"
+        android:lineSpacingExtra="15sp"
         android:textAlignment="center"
         android:textColor="#000000"
         android:textIsSelectable="false"
@@ -40,8 +40,7 @@
         app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.5
-"
+        app:layout_constraintVertical_bias="0.6"
         tools:text="Test" />
 
     <TextView
